# DIY-Delta

./: .gitignore  Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md
.github/workflows/: build-delta.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  session.rs
apps/desktop/src/components/: LapOverlayChart.tsx  SectorTable.tsx  TimeDeltaRibbon.tsx  TrackMap.tsx  WorkspaceLayout.tsx
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: Dashboard.tsx  Laps.tsx  Track.tsx  Workspace.tsx
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs
crates/delta-ingest-core/: Cargo.toml
crates/delta-ingest-core/src/: lib.rs
crates/delta-ingest-f1/: Cargo.toml
crates/delta-ingest-f1/src/: lib.rs
crates/delta-ingest-gt7/: Cargo.toml
crates/delta-ingest-gt7/src/: lib.rs
crates/delta-ingest-lmu/: Cargo.toml
crates/delta-ingest-lmu/src/: lib.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
data/: f1_24.json  f1_25.json  games.json  gt7.json  lmu.json
