[package]
name = "delta-ingest-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features=["rt-multi-thread","macros","net","time","sync"] }
anyhow = "1.0"
bytes = "1.6"
crossbeam-channel = "0.5"
thiserror = "1.0"
parking_lot = "0.12"
futures = "0.3"
uuid = { version = "1.10", features=["v4","serde"] }
time = { version = "0.3", features = ["formatting"] }
