[package]
name = "delta-ingest-f1"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
tokio = { version = "1.39", features=["rt-multi-thread","macros","net","time"] }
byteorder = "1.5"
serde = { version = "1.0", features=["derive"] }
async-trait = "0.1"
delta-ingest-core = { path = "../delta-ingest-core" }
