[package]
name = "delta-desktop"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
crossbeam-channel = "0.5"
cfg-if = "1.0"
dirs-next = "2.0"

model = { path = "../../../crates/model" }
analysis = { path = "../../../crates/analysis" }
iox = { package = "delta-io", path = "../../../crates/io" }

delta-ingest-core = { path = "../../../crates/delta-ingest-core" }
delta-ingest-f1 = { path = "../../../crates/delta-ingest-f1" }
delta-ingest-gt7 = { path = "../../../crates/delta-ingest-gt7" }
delta-ingest-lmu = { path = "../../../crates/delta-ingest-lmu" }

[build-dependencies]
tauri-build = "2.0.0"
